--- a/scss/components/_content.scss
+++ b/scss/components/_content.scss
@@ -27,6 +27,10 @@ main {
     width: 100%;
     max-width: 610px;
     padding: 0 $gap;
+
+    @media #{$mobile-xs} {
+      padding: 0 $gap-sm;
+    }
   }
 
   .logo{
