--- a/scss/components/_variables.scss
+++ b/scss/components/_variables.scss
@@ -6,6 +6,7 @@ $brand-black: #2D2222;
 $white: #fff;
 $black: #000;
 $gap: 25px;
+$gap-sm: 15px;
 $roboto: Roboto, sans-serif;
 $industry: Industry, sans-serif;
 $mobile: screen and (max-width: 767px);
